# SERIES-2-MHD-GEN-4

./: .dockerignore  .gitignore  AGENTS.md  GEMINI.md  LICENSE  Margin_Report.md  README.md  build.tcl  fix.py  fix_tests.py  prompt.txt  pyproject.toml  requirements.txt  requirements_pinned.txt  scratch.py  snapshot.h5  validation_report.md
compliance/: ce_marking.md  emc_test_plan.md  fcc_pre_check.md  ul_listing.md
config/: cost_model.yaml  deployment.yaml  detection_thresholds.yaml  hardware_config.yaml  materials_db.py  materials_db.yaml  scavenger_registry.py  sites.py  system_config.py
constraints/: mhd_fpga.xdc
control/: fpga.py  state_machine.py
core/: integrator.py  logging.py  safety_machine.py  state_bounds.py  state_vector.py  units.py
deployment/: alpha_node_provision.sh  alpha_runbook.md  penrose_alpha_checklist.md
digital_twin/: cfd_bridge.py  channel_2d.py  hil_runner.py  lumped_model.py  network_1d.py  validation_runner.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  CHANGELOG_DAILY_2026-07-14.md  FALSIFICATION.md  MODULE_STATUS.md  REHEARSAL.md  TURNOVER.md  TURNOVER_2026-07-19.md  WHITEPAPER.md
grafana/: dashboard.json  dashboard_provider.yaml  datasource.yaml
gui/: main.py  main_window.py
hardware/: fpga_interface.py  gpsdo_sync.py  pps_capture.py  vivado_build.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
network/: aggregator.py  consensus.py  correlator.py  events.py  mesh.py  node_identity.py  transport.py
node/: node_agent.py
packaging/: build_deb.sh  (+2 more)
(+162 files in other folders)
